--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/printing_images.png
+   - assets/images/printing_images.png
+   - assets/images/africa.jpg
+   - assets/images/asia.jpg
+   - assets/images/antartica.jpg
+   - assets/images/australia.jpg
+   - assets/images/europe.jpg
+   - assets/images/south_america.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
