--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,9 @@ flutter:
    - assets/images/australia.jpg
    - assets/images/europe.jpg
    - assets/images/south_america.jpg
+   - assets/images/test1.png
+   - assets/images/test2.png
+   - assets/images/test3.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
