--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   firebase_core: ^2.5.0
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0-nullsafety.0
-  http:
+  http: ^0.13.4
   shared_preferences: ^2.0.0-nullsafety
   chewie: ^1.2.2
   video_player: ^2.1.10
-  fluttertoast:
+  fluttertoast: ^8.0.9
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
