--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/images/printing_images.png
+   - assets/images/image01.jpg
    - assets/images/africa.jpg
    - assets/images/asia.jpg
    - assets/images/antartica.jpg
