--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
    - assets/images/test1.png
    - assets/images/test2.png
    - assets/images/test3.png
+   - assets/images/profileIcon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
