--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,9 +83,9 @@ flutter:
    - assets/images/profileIcon.png
    - assets/images/printing_images.png
    - assets/images/qrCode.PNG
-   - assets/images/papers.png,
-   - assets/images/poster.png,
-   - assets/images/hard cover.jpg,
+   - assets/images/papers.png
+   - assets/images/poster.png
+   - assets/images/hardCover.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
