--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   chewie: ^1.2.2
   video_player: ^2.1.10
   fluttertoast: ^8.2.1
+  dio: ^4.0.6
+  get_it: ^7.2.0
+  intl: ^0.17.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
